syntax = "proto3";

package pb;

option go_package = "internal/metadata/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "dtos/data_source.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service DataSourceService {
  rpc List(DataSourceListParams) returns (DataSourceListResponse) {
    option (google.api.http) = {
      get: "/api/v1/datasource"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }
  
  rpc Get(DataSourceGetRequest) returns (pb.DataSource) {
    option (google.api.http) = {
      get: "/api/v1/datasource/{name}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer"
        }
      }
    };
  }
  
  rpc Create(pb.DataSource) returns (pb.DataSource) {
    option (google.api.http) = {
      post: "/api/v1/datasource"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer"
        }
      }
    };
  }
  
  rpc Update(pb.UpdateDataSource) returns (pb.DataSource) {
    option (google.api.http) = {
      put: "/api/v1/datasource"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer"
        }
      }
    };
  }
  
  rpc Delete(DataSourceDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/datasource/{name}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer"
        }
      }
    };
  }
}

message DataSourceGetParams {
  bool detection_sections = 1;
  bool detection_points = 2;
}

message DataSourceGetRequest {
  string name = 1;
  DataSourceGetParams params = 2;
}

message DataSourceDeleteRequest {
  string name = 1;
}

message DataSourceListParams {
  bool detection_sections = 1;
  bool detection_points = 2;
}

message DataSourceListResponse {
  repeated pb.DataSource datasource = 1;
}

